Mengganti screen size

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body class="bg-green-100 font-poppins">
     <div class="flex flex-wrap items-center justify-center ml-56 relative">
         <div class="container max-w-4xl bg-white rounded shadow-xl m-12">
-            <div class="h-96 overflow-hidden rounded-t sm:h-40 md:h-72 lg:h-96">
+            <div class="overflow-hidden rounded-t sm:h-10 md:h-72 lg:h-96">
                 <img class="w-full rounded-t" src="dist/img/1.jpg" alt="Photo by Abd. Muththalib"/>
             </div>
             <div class="flex justify-center px-5 -mt-24 mb-5">
-                <span class="block sm:h-32 sm:w-32 sm:mt-10 md:h-40 md:w-40 md:mt-7 lg:h-44 lg:w-44 lg:mt-5">
+                <span class="block sm:h-10 sm:w-10 sm:mt-10 md:h-40 md:w-40 md:mt-7 lg:h-44 lg:w-44 lg:mt-5">
                     <img class="mx-auto object-cover rounded-full bg-white p-1.5" src="dist/img/Okta 500px.jpg" alt="Oktafianugrahadi" />
                 </span>
             </div>
