--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid Mubarak 1443H</title>
     <link rel="stylesheet" href="src/style.css">
+    <!-- <link rel="stylesheet" href="src/output.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
