--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body class="bg-green-100 font-poppins">
     <div class="flex flex-wrap items-center justify-center ml-56 relative">
         <div class="container max-w-4xl bg-white rounded shadow-xl m-12">
-            <div class="h-96 overflow-hidden rounded-t sm:h-40 md:h-72 lg:h-96">
+            <div class="overflow-hidden rounded-t sm:h-50 md:h-72 lg:h-96">
                 <img class="w-full rounded-t" src="dist/img/1.jpg" alt="Photo by Abd. Muththalib"/>
             </div>
             <div class="flex justify-center px-5 -mt-24 mb-5">
-                <span class="block sm:h-32 sm:w-32 sm:mt-10 md:h-40 md:w-40 md:mt-7 lg:h-44 lg:w-44 lg:mt-5">
+                <span class="block sm:h-20 sm:w-20 sm:mt-16 md:h-40 md:w-40 md:mt-7 lg:h-44 lg:w-44 lg:mt-5">
                     <img class="mx-auto object-cover rounded-full bg-white p-1.5" src="dist/img/Okta 500px.jpg" alt="Oktafianugrahadi" />
                 </span>
             </div>
             <div class="px-7 mb-8">
-                <h1 class="font-bold text-green-800 text-center font-almarai lg:text-8xl md:text-5xl sm:text-3xl">عيد مبارك</h1>
-                <h2 class="mt-8 font-bold text-green-800 text-center sm:text-2xl md:text-3xl lg:text-5xl">Eid Mubarak</h2>
+                <h1 class="font-bold text-green-800 text-center font-almarai lg:text-8xl md:text-5xl sm:text-xl">عيد مبارك</h1>
+                <h2 class="mt-8 font-bold text-green-800 text-center sm:text-xl md:text-3xl lg:text-5xl">Eid Mubarak</h2>
                 <!-- <p>May Allah brings us joy, health, happiness, peace and prosperity on this blessed day.</p> -->
                 <p class="text-slate-2xl text-center italic text-slate-500 mt-10 sm:text-xl md:text-2xl">Selamat hari raya Idul Fitri, Kepada Anggota Keluarga, Teman, Kerabat, dan rekan kerja. Mohon maaf lahir dan batin</p>
             </div>
